[gd_scene load_steps=3 format=3 uid="uid://chw8kc2q4o3pi"]

[ext_resource type="Script" path="res://#Scenes/SceneScripts/MainMenu.gd" id="1_mwp8y"]
[ext_resource type="Texture2D" uid="uid://u5naod8gur3m" path="res://Art/Menus/main_menu_bg-1.png" id="2_v07no"]

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwp8y")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_v07no")
expand_mode = 1

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 34
text = "This is the main menu"

[node name="button container" type="Control" parent="."]
anchors_preset = 0
offset_left = 3.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="button container"]
offset_left = 1100.0
offset_top = 484.0
offset_right = 1259.0
offset_bottom = 547.0
focus_neighbor_top = NodePath("../Quit")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Options" type="Button" parent="button container"]
offset_left = 1100.0
offset_top = 549.0
offset_right = 1259.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Quit" type="Button" parent="button container"]
offset_left = 1100.0
offset_top = 615.0
offset_right = 1259.0
offset_bottom = 678.0
focus_neighbor_bottom = NodePath("../Start")
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="focus_entered" from="button container/Start" to="." method="_on_start_focus_entered"]
[connection signal="pressed" from="button container/Start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="button container/Options" to="." method="_on_options_focus_entered"]
[connection signal="pressed" from="button container/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="button container/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="button container/Quit" to="." method="_on_quit_pressed"]
